# fitness_coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/analysis/: engine.py  pose.py  pose_detector.py  smoothing.py  visibility.py
app/analysis/exercises/: base.py  plank.py  pushup.py  squat.py
app/api/: rest.py  ws.py
app/core/: auth.py  config.py  enhanced_logging.py  geometry.py  logging.py  metrics.py  models.py  rate_limiter.py
app/feedback/: generator.py  llm.py  policy.py
app/ml/: __init__.py  online.py
app/storage/: engine_serializer.py  hybrid_storage.py  inmemory.py  simple_redis_storage.py
