[project]
name = "fitness-coach-backend"
version = "0.1.0"
description = "Real-Time AI Fitness Coaching Backend (REST + WebSocket)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "slowapi>=0.1.9",
  "psutil>=5.9",
  "structlog>=23.2",
  "opencv-python>=4.8",
  "mediapipe>=0.10.7",
]
